<resources>
    <string name="app_name">EnglishLearningApp</string>
    <string name="animal_image_description">Animal Image</string>
    <string name="play_story">Play Story</string>
    <string name="speak">Speak</string>
    <string name="interactive_cat">Interactive Cat</string>
    <string name="Play_story">Play Story</string>
    <string name="Speak">Speak</string>
    <string name="developed_by_sabila_marista_losya_2024">© Developed by Sabila Marista Losya 2024</string>
    <string name="interactive_cat_image">Interactive Cat Image</string>
    <string name="english_learning_app">English Learning App</string>
    <string name="practice_pronunciation">Practice Pronunciation</string>
    <string name="speak_to_practice">Speak to practice</string>
    <string name="the_adventures_of_whiskers">The Adventures of Whiskers</string>
    <string name="tap_to_read">Tap to read</string>
</resources>